# fmt-utils

./: Cargo.toml  README.md
src/: fast_fmt.rs  lib.rs  std.rs
